フィードバックの設問はgameに紐づける様に
