# src/handler/v2/game_feedback.go
@@ -10,14 +10,14 @@ import (
 type GameFeedback struct{}
 
 // フィードバック質問一覧の取得
-// (GET /editions/{editionID}/games/{gameID}/feedback-questions)
-func (gf *GameFeedback) GetFeedbackQuestions(c echo.Context, _ openapi.EditionIDInPath, _ openapi.GameIDInPath) error {
+// (GET /games/{gameID}/feedback-questions)
+func (gf *GameFeedback) GetFeedbackQuestions(c echo.Context, _ openapi.GameIDInPath) error {
 	return c.NoContent(http.StatusNotImplemented)
 }
 
 // フィードバック質問の一括設定
-// (PUT /editions/{editionID}/games/{gameID}/feedback-questions)
-func (gf *GameFeedback) PutFeedbackQuestions(c echo.Context, _ openapi.EditionIDInPath, _ openapi.GameIDInPath) error {
+// (PUT /games/{gameID}/feedback-questions)
+func (gf *GameFeedback) PutFeedbackQuestions(c echo.Context, _ openapi.GameIDInPath) error {
 	return c.NoContent(http.StatusNotImplemented)
 }
 
